// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownButton onOpen should match snapshot 1`] = `
<div>
  <button
    class="flex justify-between items-center h-11 w-full focus:outline-none"
  >
    <div
      class="flex items-center"
    >
      <div
        class="hidden sm:block"
      >
        <div
          class="Circle__CircleWrapper-sc-1hq8kv9-0 cqSuMy rounded-l-3xl border-r bg-green-darkest ring-theme-background"
        >
          <div
            class="sc-bdfBwQ dfWOLJ ml-2"
            data-testid="dropdown__left__icon"
            height="15"
            width="15"
          >
            <svg
              fill="#029383"
              stroke="#ffffff"
            >
              address.svg
            </svg>
          </div>
        </div>
      </div>
      <div />
    </div>
    <div
      class="sc-bdfBwQ dfWOLJ transition-transform mx-5 transform rotate-180"
      data-testid="dropdown__right_icon"
      height="15"
      width="15"
    >
      <svg>
        arrow-down.svg
      </svg>
    </div>
  </button>
</div>
`;

exports[`DropdownButton onOpen should match snapshot 2`] = `
<div>
  <button
    class="flex justify-between items-center h-11 w-full focus:outline-none"
  >
    <div
      class="flex items-center"
    >
      <div
        class="hidden sm:block"
      >
        <div
          class="Circle__CircleWrapper-sc-1hq8kv9-0 cqSuMy rounded-l-3xl border-r bg-black-light ring-theme-background"
        >
          <div
            class="sc-bdfBwQ dfWOLJ ml-2"
            data-testid="dropdown__left__icon"
            height="15"
            width="15"
          >
            <svg
              fill="#000000"
              stroke="#FBC457"
            >
              address.svg
            </svg>
          </div>
        </div>
      </div>
      <div />
    </div>
    <div
      class="sc-bdfBwQ dfWOLJ transition-transform mx-5"
      data-testid="dropdown__right_icon"
      height="15"
      width="15"
    >
      <svg>
        arrow-down.svg
      </svg>
    </div>
  </button>
</div>
`;
